// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarContent/> should have the right class names when initials variant is default 1`] = `
<abbr
  className="slds-avatar__initials slds-icon-standard-user"
>
  JD
</abbr>
`;

exports[`<AvatarContent/> should have the right class names when initials variant is inverse 1`] = `
<abbr
  className="slds-avatar__initials slds-avatar__initials_inverse"
>
  JD
</abbr>
`;
